add module handling for building in Java 9 and later