@@ -56,6 +56,27 @@
     </properties>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.2</version>
+                    <configuration>
+                        <!-- The below is required for testing annotation processors -->
+                        <!-- using com.google.testing.compile:compile-testing.       -->
+                        <argLine>
+                            --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                            --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                            --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                            --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                            --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                            --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
+                </plugin>            
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -81,9 +102,6 @@
                                 <root>src/main/java</root>
                                 <root>src/test/java</root>
                             </roots>
-                            <excludes>
-                                <exclude>**/com/ibm/icu/**</exclude>
-                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
